tests/syntax_error/let_without_type.jou
def main() -> int:
    let x = 1  # Error: there is no 'let' keyword in Jou
